--- a/express-integration/express-generator/views/parks-map.hbs
+++ b/express-integration/express-generator/views/parks-map.hbs
@@ -5,4 +5,4 @@
 <script src="/javascripts/parks-map-app.js"></script>
 
 <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxRnLJg31O3CW392wq9udS4-5NKMhp8ws&callback=initMap"></script>
+    src="https://maps.googleapis.com/maps/api/js?key=___your_key_here___&callback=initMap"></script>
