--- a/express-integration/express-generator/views/restaurants/all-restaurants.hbs
+++ b/express-integration/express-generator/views/restaurants/all-restaurants.hbs
@@ -8,4 +8,4 @@
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="/javascripts/restaurants-map-app.js"></script>
 <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxRnLJg31O3CW392wq9udS4-5NKMhp8ws&callback=initMap"></script>
+    src="https://maps.googleapis.com/maps/api/js?key=___your_key_here___&callback=initMap"></script>
